# cmd/target-service/docs/swagger.json
@@ -856,6 +856,12 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "Caller's plan (stamped by Traefik / website); resolved via service-service when absent",
+                        "name": "X-User-Plan",
+                        "in": "header"
+                    },
+                    {
                         "description": "Target registration payload",
                         "name": "request",
                         "in": "body",
@@ -888,6 +894,24 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/model.Response"
+                        }
+                    },
+                    "403": {
+                        "description": "plan target cap reached (code=plan_upgrade_required)",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/handler.PlanUpgradeRequiredData"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "409": {
@@ -1160,6 +1184,23 @@
         }
     },
     "definitions": {
+        "handler.PlanUpgradeRequiredData": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "example": "plan_upgrade_required"
+                },
+                "max_targets": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "plan": {
+                    "type": "string",
+                    "example": "free"
+                }
+            }
+        },
         "model.AdminAuthorizeTargetRequest": {
             "type": "object",
             "properties": {
